<resources>
    <string name="app_name">PolusHackathonProject</string>
    <string name="history">История</string>
    <string name="task">Задача</string>
    <string name="profile">Профиль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="signup">Войти</string>
    <string name="pictureContentDescription">picture</string>
    <string name="email_error">Неправильный email</string>
    <string name="password_error">Неправильный пароль</string>
    <string name="small_password_error">Пароль должен иметь более 8 символов</string>
    <string name="data_is_valid">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Карта</string>
</resources>
