<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/main_action_bar_background">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/pictureContentDescription"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/main_logo"/>

        <TextView
            android:id="@+id/page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textSize="24sp"
            android:textColor="@color/text"/>

    </LinearLayout>



    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.viewpager2.widget.ViewPager2>



    <com.google.android.material.tabs.TabLayout
        style="@style/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bottom_bar_background"
        app:tabIndicator="@color/transparent"
        app:tabRippleColor="@null">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/historyTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/main_history_tab"
            android:text="@string/history"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/taskTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/main_task_tab"
            android:text="@string/task"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/main_profile_tab"
            android:text="@string/profile"/>
    </com.google.android.material.tabs.TabLayout>
</LinearLayout>