<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/white"
    android:weightSum="2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_logo_digital"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_weight="1"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/signup_background">
        <EditText
            android:id="@+id/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_input_field"
            android:hint="@string/login"
            android:textColorHint="@color/hint"
            android:textColor="@color/text"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>
        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_input_field"
            android:hint="@string/password"
            android:textColor="@color/text"
            android:textColorHint="@color/hint"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"/>
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="NestedWeights">
            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:layout_gravity="bottom"
                android:background="@drawable/signup_button"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>